Make sure logo get center aligned vertically

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -66,6 +66,7 @@ footer {
 
     a {
       display: inline-block;
+      vertical-align: middle;
 
       img {
         display: block;
