--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -23,6 +23,7 @@ header {
 
     a {
       display: inline-block;
+      vertical-align: middle;
 
       img {
         display: block;
